--- a/Project/Chat/Views/MainWindowView.xaml
+++ b/Project/Chat/Views/MainWindowView.xaml
@@ -13,16 +13,23 @@
         Title="Chat">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="1" Grid.Row="1" FontStyle="Normal" Text="{Binding Text}"/>
+        <Button Grid.Column="1" Grid.Row="0" x:Name="ChangeText" Content="Change" Width="50" Height="20"/>
+        <TextBox Grid.Column="0" Grid.Row="0" Text="{Binding Text}" Height="20" Width="100"/>
+
+        <TextBlock Grid.Column="2" Grid.Row="1" FontStyle="Normal" Text="{Binding Text1}"/>
+        <Button Grid.Column="2" Grid.Row="0" x:Name="ChangeText1" Content="Change" Width="50" Height="20"/>
+        <TextBox Grid.Column="3" Grid.Row="0" Text="{Binding Text1}" Height="20" Width="100"/>
+
     </Grid>
 </Window>
